# FSST-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: compress.rs  decompress.rs
examples/: single_str.rs  str_from_file.rs
src/: lib.rs
src/core/: codec.rs  counter.rs  mod.rs  symbol.rs  symbol_table.rs
src/util/: endian.rs
